@@ -1,0 +1,4 @@
+Bot-BasicBot-*
+cover_db
+.build
+nytprof*
