@@ -1,13 +1,0 @@
-Changes
-examples/countdownbot.pl
-examples/cpanbot.pl
-examples/namer.pl
-examples/tailbot.pl
-examples/tango.pl
-lib/Bot/BasicBot.pm
-Makefile.PL
-MANIFEST
-t/00bootstrap.t
-t/connect.t
-t/lib/TestBot.pm
-META.yml                                 Module meta-data (added by MakeMaker)
