@@ -1,0 +1,5 @@
+^Bot-BasicBot-
+^cover_db/
+^utils/developer/
+^xt/
+^nytprof
