@@ -1,14 +1,0 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Bot-BasicBot
-version:      0.81
-version_from: lib/Bot/BasicBot.pm
-installdirs:  site
-requires:
-    POE:                           0.22
-    POE::Component::IRC:           4.0
-    Test::More:                    0.01
-    Text::Wrap:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
