@@ -1,17 +1,0 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.03
-use ExtUtils::MakeMaker;
-WriteMakefile
-(
-          'PL_FILES' => {},
-          'INSTALLDIRS' => 'site',
-          'NAME' => 'Bot::BasicBot',
-          'EXE_FILES' => [],
-          'VERSION_FROM' => 'lib/Bot/BasicBot.pm',
-          'PREREQ_PM' => {
-                           'Test::More' => '0.01',
-                           'POE::Component::IRC' => '6.35',
-                           'Text::Wrap' => 0,
-                           'POE' => '0.22'
-                         }
-        )
-;
