@@ -1,0 +1,19 @@
+name             = Bot-BasicBot
+author           = Tom Insam <tom@jerakeen.org>
+author           = Hinrik Örn Sigurðsson <hinrik.sig@gmail.com>
+copyright_holder = Tom Insam, Hinrik Örn Sigurðsson
+license          = Perl_5
+
+[@AVAR]
+dist               = Bot-BasicBot
+authority          = cpan:HINRIK
+bugtracker         = rt
+use_CompileTests   = 0
+nextrelease_format = %-5v %{ccc MMM d HH:mm:ss V YYYY}d
+github_user        = hinrik
+git_tag_message    = CPAN release %v
+no_AutoPrereq      = 1
+
+[Prereqs / Runtime]
+POE::Component::IRC = 6.35
+Text::Wrap          = 0
